# CHYMERA_Devices

./: .gitignore  Dockerfile  README.md  pyproject.toml
chym_app/: __init__.py  config.py  main.py
chym_app/core/: assistant.py  image_processor.py  model_loader.py
chym_app/ui/: main_window.py
chym_app/widgets/: analysis_views.py  chat_panel.py
runs/detect/yolov8-chest-xray14/: args.yaml  results.csv
runs/detect/yolov8-chest-xray24/: args.yaml  events.out.tfevents.1744734335.LUCIA.29356.0  results.csv
