[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chym-quality-analyzer"
version = "0.1.0"
description = "Desktop Qt application for chest X-ray quality assessment"
authors = [{name = "CHYMERA"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "torch",
    "torchvision",
    "tensorflow",
    "torchxrayvision",
    "ultralytics",
    "opencv-python-headless",
    "scikit-image",
    "plotly",
    "kaleido",
    "numpy",
    "pillow",
    "h5py",
    "torchcam",
]

[project.scripts]
chym-analyzer = "chym_app.main:main"
